Closed
Bug 1156777
Opened 10 years ago
Closed 10 years ago
nsParseMailbox.cpp:505:55: error: 'do_QueryObject' was not declared in this scope
Categories
(MailNews Core :: Backend, defect)
MailNews Core
Backend
Tracking
(firefox40 affected, thunderbird40 fixed, seamonkey2.37 fixed)
RESOLVED
FIXED
Thunderbird 40.0
People
(Reporter: philip.chee, Assigned: philip.chee)
References
Details
Attachments
(1 file)
1.03 KB,
patch
|
philip.chee
:
review+
|
Details | Diff | Splinter Review |
https://treeherder.mozilla.org/logviewer.html#?job_id=16675&repo=comm-central
/builds/slave/tb-c-cen-lx-ntly-0000000000000/build/mailnews/local/src/nsParseMailbox.cpp: In member function 'nsresult nsMsgMailboxParser::AcquireFolderLock()':
/builds/slave/tb-c-cen-lx-ntly-0000000000000/build/mailnews/local/src/nsParseMailbox.cpp:505:55: error: 'do_QueryObject' was not declared in this scope
make[5]: *** [nsParseMailbox.o] Error 1
make[4]: *** [mailnews/local/src/target] Error 2
Comment hidden (Legacy TBPL/Treeherder Robot) |
Comment hidden (Legacy TBPL/Treeherder Robot) |
Comment hidden (Legacy TBPL/Treeherder Robot) |
Comment hidden (Legacy TBPL/Treeherder Robot) |
Assignee | ||
Comment 5•10 years ago
|
||
Fixes comm-central bustage
Assignee | ||
Updated•10 years ago
|
Attachment #8595368 -
Attachment description: include nsQueryObject.h → include nsQueryObject.h rs=jcranmer bustage fix
Attachment #8595368 -
Flags: review?(rkent) → review+
Assignee | ||
Comment 6•10 years ago
|
||
Status: ASSIGNED → RESOLVED
Closed: 10 years ago
status-seamonkey2.37:
--- → fixed
status-thunderbird40:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → Thunderbird 40.0
You need to log in
before you can comment on or make changes to this bug.
Description
•