Bug 1156777 - nsParseMailbox.cpp:505:55: error: 'do_QueryObject' was not declared in this scope rs=jcranmer bustage fix