mailnews/local/src/nsParseMailbox.cpp
@@ -58,6 +58,7 @@
 #include <ctype.h>
 #include "nsIMsgPluggableStore.h"
 #include "mozilla/Services.h"
+#include "nsQueryObject.h"
 
 static NS_DEFINE_CID(kRDFServiceCID, NS_RDFSERVICE_CID);
 
